// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with one expense 1`] = `
<div>
  <h1>
    viewing 1 expense totaling $2.22
  </h1>
</div>
`;

exports[`should correctly render expense Summary with multple expenses 1`] = `
<div>
  <h1>
    viewing 2 expenses totaling $2,245.42
  </h1>
</div>
`;
